--- a/index.css
+++ b/index.css
@@ -21,3 +21,26 @@
   padding: 10px;
   margin: 10px;
 }
+
+.res-card {
+  padding: 5px;
+  width: 200px;
+  height: 400px;
+}
+
+.search {
+  padding: 10px;
+}
+.res-logo {
+  margin: 5px;
+  width: 190px;
+}
+.res-card:hover {
+  cursor: pointer;
+  border: 1px solid black;
+}
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5px;
+}
