--- a/index.css
+++ b/index.css
@@ -47,3 +47,18 @@
   margin: 10px;
   cursor: pointer;
 }
+
+.shimmer-card {
+  width: 240px;
+  height: 430px;
+  padding: 12px;
+  background-color: #ccc3c3;
+  margin: 5px;
+  border-radius: 15px;
+}
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px;
+}
