--- a/index.css
+++ b/index.css
@@ -1,4 +1,6 @@
-.header {
+@import "tailwindcss";
+
+/* .header {
   display: flex;
   justify-content: space-between;
   border: 1px solid black;
@@ -76,4 +78,4 @@
 .user-card {
   padding: 10px;
   border: 1px solid black;
-}
+} */
